# opentera-teleop-service

./: .gitmodules  BaseWebRTCService.py  CMakeLists.txt  ConfigManager.py  FlaskModule.py  Globals.py  README.md  TeleopService.py  TeleopServiceWebRTCModule.py  babel.cfg  create_conda_venv.sh  opentera-teleop-service.py  requirements.txt  start_docker.sh
API/: QueryManageSession.py  QueryVersion.py
Views/: Index.py
app/: main.py
app/routers/: index.py
config/: TeleopService.json  iceServers.json
docker/: Dockerfile
docker/examples/: README.md  docker-compose.yml
signaling-static/: client.js  data_client.js  index.html  stream_client.js
signaling-template/: index.html
static/: default_index.html
translations/en/LC_MESSAGES/: teleop_service.po
translations/fr/LC_MESSAGES/: teleop_service.po
webportal/: .env.production  README.md  launch.json  package-lock.json  package.json  tasks.json  vue.config.js
webportal/src/: App.vue  i18n.js  main.js
webportal/src/components/: About.vue  ElapsedSessionTime.vue  HelloI18n.vue  HelloWorld.vue  LocaleChanger.vue  Login.vue  Robot.vue  RobotList.vue  Session.vue  SessionList.vue  StatusBar.vue
webportal/src/config/: dev.env.js  index.js  prod.env.js
webportal/src/locales/: en.json  fr.json
webportal/src/router/: index.js
webportal/src/services/: opentera_api.js  opentera_auth.js
webportal/src/store/: api.module.js  auth.module.js  index.js  websocket.module.js
webportal/src/views/: AboutView.vue  Home.vue  HomeView.vue  LoginView.vue  SessionView.vue  StatsView.vue
